# otls

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh  install.sh
.github/workflows/: arm.yml  x86.yml
backend/: _offline_hg_eva.h  _offline_hg_gen.h  _offline_pado_eva.h  _offline_pado_gen.h  backend.h  bn_utils.h  check_zero.h  checkzero.h  com_conv.h  commitment.h  offline_hg_eva.h  offline_hg_gen.h  offline_pado_eva.h  offline_pado_gen.h  offline_pado_party.h  offline_primus_eva.h  offline_primus_gen.h  offline_primus_party.h  ole.h  ole_f2k.h  ole_u64.h  online_hg_eva.h  online_hg_gen.h  online_pado_eva.h  online_pado_gen.h  online_primus_eva.h  online_primus_gen.h  opt_hg_eva.h  opt_hg_gen.h  pado_eva.h  pado_gen.h  pado_party.h  primus_eva.h  primus_gen.h  primus_party.h  switch.cpp  switch.h  vope.h
cipher/: aead.h  aead_izk.h  aes128_with_ks.txt  aesgcm.h  hmac_sha256.h  prf.h  sha256.h  utils.cpp  utils.h
cipher/circuit_files/: aes128_ks.txt  aes128_ks_data.cpp  aes128_with_ks_data.cpp
cmake/: otls-config.cmake
handshake/: add.h  e2f.h  handshake.h
prf/: aesgcm.h  hmac_sha256.cpp  hmac_sha256.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  tlsprf.cpp  tlsprf.h  utils.h
protocol/: add.h  addmod.h  aead.h  aead_izk.h  com_conv.h  e2f.h  handshake.h  izk.h  post_record.h  prove_aes.h  prove_prf.h  record.h  switch.h
test/: CMakeLists.txt  add.cpp  addmod.cpp  aead.cpp  aead_izk.cpp  aead_on_off.cpp  aes.cpp  aesgcm.cpp  bit.cpp  check_zero.cpp  circuit_file.cpp  com_conv.cpp  commitment.cpp  e2f.cpp  example.cpp  handshake.cpp  handshake_on_off.cpp  hmac.cpp  int.cpp  io.cpp  io_utils.h  izk.cpp  ole.cpp  ole_f2k.cpp  online_offline.cpp  post_record.cpp  prf.cpp  prf_on_off.cpp  prot_on_off.cpp  protocol.cpp  prove_aes.cpp  prove_prf.cpp  prove_proxy_tls.cpp  record.cpp  repeat.cpp  rounds.cpp  switch.cpp  tlsprf.cpp  vope.cpp
