#Testing macro
macro (add_test_executable_with_lib _name libs)
    add_executable(test_${_name} "${_name}.cpp")
    target_link_libraries(test_${_name} otls ${EMP-ZK_LIBRARIES})
endmacro()

macro (add_test_case _name)
    add_test_executable_with_lib(${_name} "")
    add_test(NAME ${_name} COMMAND "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
endmacro()

macro (add_test_case_with_run _name)
    add_test_executable_with_lib(${_name} "")
    add_test(NAME ${_name} COMMAND "./run" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")

endmacro()

# Test cases
add_test_case_with_run(bit)
add_test_case_with_run(int)
add_test_case_with_run(circuit_file)
add_test_case_with_run(online_offline)
add_test_case_with_run(example)
add_test_case_with_run(repeat)
add_test_case_with_run(aes)
add_test_case_with_run(ole)
add_test_case_with_run(ole_f2k)
add_test_case_with_run(vope)
add_test_case_with_run(com_conv)
add_test_case_with_run(hmac)
add_test_case_with_run(prf)
add_test_case_with_run(e2f)
add_test_case_with_run(add)
add_test_case_with_run(handshake)
add_test_case_with_run(aead)
add_test_case_with_run(protocol)
add_test_case_with_run(switch)
add_test_case_with_run(check_zero)
add_test_case_with_run(commitment)
add_test_case_with_run(aead_izk)
add_test_case_with_run(post_record)
